# gazebo2rviz

./: CMakeLists.txt  package.xml
include/gazebo2rviz/: get_sdf_service.h
src/: get_sdf_service.cpp
srv/: GetSdf.srv
